Adicionados parâmetros 'listadefiguras' e 'listadetabelas' ao comando ppgccufmg, que funcionarão como flags para gerar ou não a lista de figuras e tabelas.

--- a/exemplo/exemplo.tex
+++ b/exemplo/exemplo.tex
@@ -57,7 +57,9 @@
 		agradecimentos={agradecimentos.tex},
 		epigrafe={Truth and lie are opposite things.},
 		epigrafeautor={Unkown},
-		listascustomizadas={\listadealgoritmos}
+		listadefiguras={sim}, %% Remova (ou comente) este parâmetro para remover a lista de figuras
+		listadetabelas={sim}, %% Remova (ou comente) este parâmetro para remover a lista de tabelas
+		listascustomizadas={\listadealgoritmos} %% Lista customizada (e.g., lista de algoritmos). 
 	}
 	
 	\chapter{Introdução}
