--- a/exemplo/ppgccufmg.cls
+++ b/exemplo/ppgccufmg.cls
@@ -98,6 +98,8 @@
 \define@key{ppgcc}{epigrafeautor}{\defepigrafeautor{#1}} %% Autor do epígrafe
 \define@key{ppgcc}{dedicatoria}{\defdedicatoria{#1}}
 \define@key{ppgcc}{agradecimentos}{\defagradecimentos{#1}}
+\define@key{ppgcc}{listadefiguras}{\deflistadefiguras{#1}} %% Flag que decide se adiciona ou não a lista de figuras no documento
+\define@key{ppgcc}{listadetabelas}{\deflistadetabelas{#1}} %% Flag que decide se adiciona ou não a lista de tabelas no documento
 \define@key{ppgcc}{listascustomizadas}{\deflistascustomizadas{#1}}
 
 
@@ -123,6 +125,8 @@
 \newcommand{\defepigrafeautor}[1]{\def\epigrafeautor{#1}}
 \newcommand{\defdedicatoria}[1]{\def\dedicatoria{#1}}
 \newcommand{\defagradecimentos}[1]{\def\agradecimentos{#1}}
+\newcommand{\deflistadefiguras}[1]{\def\listadefiguras{#1}}
+\newcommand{\deflistadetabelas}[1]{\def\listadetabelas{#1}}
 \newcommand{\deflistascustomizadas}[1]{\def\listascustomizadas{#1}}
 %% ==========================================
 
@@ -483,13 +487,15 @@
 	\begingroup
 	\resetaplain
 	
-	\listoffigures* %% Lista de figuras
+	\ifx\listadefiguras\undefined\else
+		\listoffigures* %% Lista de figuras
+		\clearpage
+	\fi
 	
-	\clearpage
-	
-	\listoftables* %% Lista de tabelas
-	
-	\clearpage
+	\ifx\listadetabelas\undefined\else
+		\listoftables* %% Lista de tabelas
+		\clearpage
+	\fi
 	
 	\ifx\listascustomizadas\undefined\else
 		\listascustomizadas*
